# dftfeminiapps

./: CMakeLists.txt  README.md  setupCrusher.sh  setupFrontier.sh  setupPspCpuGpuSummit.sh  setupSummit.sh  setupUserCrusherDFTFE.sh
include/: DeviceTypeConfig.hip.h  benchmarks.h  deviceKernelsGeneric.h  dftfeDataTypes.h  xtxDoubleDevice.h
src/: deviceDirectMPIAllreduce.cc  main.cc  xtxComplexDoubleDevice.cc  xtxDoubleDevice.cc
utils/: DeviceBlasWrapper.hip.cc  DeviceDirectCCLWrapper.cc  DeviceKernelsGeneric.cc
